--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/Assets/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MEALZO</title>
+    <title>MEALZO | Your Trusted Source for Tasty Food Recipes </title>
   </head>
   <body>
     <div id="root"></div>
